--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,37 @@
     "es6": true,
     "node": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:import/recommended",
-    "plugin:import/electron",
-    "plugin:import/typescript"
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
   ],
-  "parser": "@typescript-eslint/parser"
+  "extends": [
+    "airbnb-typescript",
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+     // Too restrictive, writing ugly code to defend against a very unlikely scenario: https://eslint.org/docs/rules/no-prototype-builtins
+     "no-prototype-builtins": "off",
+     // Too restrictive: https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/destructuring-assignment.md
+     "react/destructuring-assignment": "off",
+     // No jsx extension: https://github.com/facebook/create-react-app/issues/87#issuecomment-234627904
+     "react/jsx-filename-extension": "off",
+    // Allow most functions to rely on type inference. If the function is exported, then `@typescript-eslint/explicit-module-boundary-types` will ensure it's typed.
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-use-before-define": [
+      "error",
+      { "functions": false, "classes": true, "variables": true, "typedefs": true }
+    ],
+    // Common abbreviations are known and readable
+    "unicorn/prevent-abbreviations": "off",
+    // Airbnb prefers forEach
+    "unicorn/no-array-for-each": "off",
+    // It's not accurate in the monorepo style
+    "import/no-extraneous-dependencies": "off"
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  }
 }
